# stratos-bid

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_DIGITALOCEAN.md  DEPLOY_TRIGGER.md  Dockerfile  INFERENCE.md  app.yaml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
.claude/: residence-inn-signage-takeoff.md
api/: extract_vectors.py  render_pdf.py
docs/: IBEAM-ARCHITECTURE-REFERENCE.md  IBEAM-DEEP-TECHNICAL-REFERENCE.md  IBEAM-OPERATIONAL-FLOW.md  PDF-RENDERING-AND-REALTIME-DEEP-DIVE.md  TAKEOFF-PLATFORM-ARCHITECTURE.md  TOGAL-ARCHITECTURE-REFERENCE.md  takeoff-worker.md
drizzle/: 0000_fast_skreet.sql  0000_groovy_moon_knight.sql  0001_fancy_miek.sql  0001_loving_sleeper.sql  0002_bizarre_anita_blake.sql  0003_add_sheet_calibration.sql  0004_lonely_nicolaos.sql  0005_greedy_sauron.sql  0006_yummy_star_brand.sql  0007_flowery_onslaught.sql  0008_light_slayback.sql  0009_page_text_search.sql  0010_pgvector_symbol_regions.sql  0011_add_pages_ready.sql  0012_cleanup_takeoff_and_dead_columns.sql  0013_takeoff_jobs.sql  0014_takeoff_runs_findings_items.sql  0015_takeoff_publish_compare.sql  0016_takeoff_instances.sql  relations.ts  schema.ts
e2e/: pdf-upload-extraction.spec.ts  projects-flow.spec.ts  quick-diagnostic.spec.ts  takeoff.spec.ts
screenshots/: .gitkeep
scripts/: apply-migration-0014.mjs  apply-migration-0015.mjs  apply-migration-0016.mjs  clear-db.ts  debug-gmail.ts  deep-fetch-planhub.ts  (+14 more)
services/vector-extractor/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/vector-extractor/src/: extractor.py  geometry.py  main.py
services/vector-extractor/tests/: test_api.py  test_extractor.py
(+253 files in other folders)
