[project]
name = "vector-extractor"
version = "0.1.0"
description = "PDF vector extraction service for takeoff snapping"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pymupdf>=1.25.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    # ML dependencies removed to speed up builds (30 min → 3 min)
    # easyocr and sentence-transformers pulled in PyTorch (~2GB)
    # Visual search (/ocr, /embed) returns 503 when these are not installed
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
